--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "vite": "^5.4.21"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
